@@ -1,24 +1,35 @@
 package module11;
 
+import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Streams {
     public static void main(String[] args) {
+        System.out.println(System.lineSeparator() + "++++++++++ TASK 1 ++++++++++");
         List<String> names = List.of("Ivan","Mykola", "Petro", "Yevhen", "Oleg", "Serhii", "Anatolii");
         System.out.println(oddIndexNamesToString(names));
 
+        System.out.println(System.lineSeparator() + "++++++++++ TASK 2 ++++++++++");
         System.out.println(sortedWordsToUpperCase(names));
 
+        System.out.println(System.lineSeparator() + "++++++++++ TASK 3 ++++++++++");
         String[] numbers = {"1, 2, 0", "4, 5", "10, 11, 23"};
         System.out.println(stringArrayToSortedNumbers(numbers));
 
-        List<Long> list = endlessStreamOfRandomNumbers(25214903917L, 11L, (long) Math.pow(2, 48))
-                .limit(20)
-                .collect(Collectors.toList());
-        System.out.println(list);
+        System.out.println(System.lineSeparator() + "++++++++++ TASK 4 ++++++++++");
+        System.out.println(endlessStreamOfRandomNumbers(25214903917L, 11L, (long) Math.pow(2, 48))
+                .limit(10)
+                .toList());
+
+        System.out.println(System.lineSeparator() + "++++++++++ TASK 5 ++++++++++");
+        Stream<Integer> first = Stream.of(1, 2, 3, 4, 5, 6);
+        Stream<Integer> second = Stream.of(7, 8, 9, 10);
+        System.out.println(zip(first, second)
+                .toList());
     }
 
     public static String oddIndexNamesToString(List<String> list) {
@@ -36,20 +47,24 @@ public class Streams {
     }
 
     public static String stringArrayToSortedNumbers(String[] numbers) {
-//        Comparator<String> comp = (s1, s2) -> {
-//            Integer d1 = Integer.parseInt(s1);
-//            Integer d2 = Integer.parseInt(s2);
-//            return d1.compareTo(d2);
-//        };
         return Stream.of(numbers)
                 .flatMap(subNumbers -> Stream.of(subNumbers.split(", ")))
-                .map(Integer::parseInt)
-                .sorted()
-                .map(String::valueOf)
+                .sorted(Comparator.comparingInt(Integer::parseInt))
                 .collect(Collectors.joining(", "));
     }
 
     public static Stream<Long> endlessStreamOfRandomNumbers(long a, long c, long m) {
-        return Stream.iterate(12321L, xn -> (a * xn + c) % m);
+        return Stream.iterate(12321L, seed -> (a * seed + c) % m);
+    }
+
+    public static <T> Stream<T> zip(Stream<T> first, Stream<T> second) {
+        List<T> mixedElements = new ArrayList<>();
+        Iterator<T> firstIterator = first.iterator();
+        Iterator<T> secondIterator = second.iterator();
+        while (firstIterator.hasNext() && secondIterator.hasNext()) {
+            mixedElements.add(firstIterator.next());
+            mixedElements.add(secondIterator.next());
+        }
+        return mixedElements.stream();
     }
 }
